@@ -255,7 +255,7 @@ void TablaturePrintable::drawTrack(const int trackID, const LineTrackRef& curren
     for (int el=0; el<elementAmount; el++)
     {
         currentElement = &currentLine.getLayoutElement(el);
-        drawElementBase(*currentElement, currentLine, currentTrack, trackCoords, drawMeasureNumbers);
+        drawElementBase(*currentElement, currentLine, drawMeasureNumbers, trackCoords->y0, trackCoords->y1);
         
         drawVerticalDivider(currentElement, trackCoords->y0, trackCoords->y1);
         
