@@ -51,7 +51,7 @@ NOTE: sorry, this is very raw :)
     * long-term : in multi-track printing, some tracks need to be visually more tightly bound toghether (like tab and its score)
     ? allow setting font size, number of lines per page, zoom, etc...
     - X notes not printed right (nor handled correctly in score editor anyway)
- - printing : skip series of empty measures (replacing hiding of empty lines)
+ - printing : remove hiding of empty lines?
  - print tempo (and tempo changes)
  - use double bar at the end of the song
 
