@@ -10,6 +10,7 @@
     - Many other readability improvements to tablature printing
     - Better printing of time signature changes
     - Connect grand staffs toghether (extend measure bars)
+    - Collapse long series of empty measures into a gathered rest
     - Misc tweaks and fixes
 - Adding and removing tracks no more confuse the undo system
 - The "undo" menu is now chattier about what is next to undo
